--- a/frontend/src/components/Countdown/Countdown.module.css
+++ b/frontend/src/components/Countdown/Countdown.module.css
@@ -19,6 +19,7 @@
   box-sizing: border-box;
   font-family: "Bree Serif", serif;
   font-size: 100px;
+/* margin-bottom: 20rem; */
 
   /* background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%); */
 
