--- a/frontend/src/components/Event/Events.css
+++ b/frontend/src/components/Event/Events.css
@@ -1,7 +1,9 @@
+/* General Styles */
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
 body {
   background-image: url("./eventsBg.png");
   background-position: left;
@@ -10,19 +12,17 @@ body {
   background-attachment: fixed;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
+} /* Cards Container */
 .cards_ {
   width: 100%;
-  max-width: 600px;
+  max-width: 80vw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 40px 0;
+  gap: 30px;
   align-items: center;
-  padding: 40px;
-}
-
+  padding: 40px 20px;
+} /* Individual Card */
 .card_ {
   width: 100%;
   max-width: 600px;
@@ -30,84 +30,84 @@ body {
   top: 0;
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
-
 .card__inner {
-  will-change: transform;
-  /* background: white; */
   border-radius: 14px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  box-shadow: 0 15px 40px -10px hsla(265.3, 20%, 10%, 30%);
+  box-shadow: 0 15px 40px -10px rgba(20, 20, 20, 0.3);
   transform-origin: center top;
   transition: transform 0.5s ease-in-out;
-}
-
+} /* Image Container */
 .card__image-container {
   display: flex;
-  /* width: 40%; */
-  flex-shrink: 0;
+  width: 100%;
 }
-
 .card__image {
   width: 100%;
-  height: 100%;
-  /* aspect-ratio: 3/4; */
+  height: auto;
   object-fit: cover;
-}
-
+  aspect-ratio: 3 / 4;
+} /* Content */
 .card__content {
   padding: 20px;
   text-align: center;
 }
-
 .card__title {
-  padding: 0;
-  margin: 0;
   font-size: 24px;
   font-weight: 600;
   color: #16263a;
 }
-
 .card__description {
   line-height: 1.4;
   font-size: 16px;
   color: #16263a;
-}
-
+} /* Spacing */
 .space {
-  height: 90vh;
+  height: 30vh;
 }
-
 .space--small {
-  height: 40vh;
-}
-
-@media (max-width: 600px) {
-  .cards_{
+  height: 35vh;
+} /* Responsive Styles */
+@media (max-width: 1024px) {
+  .cards_ {
+    max-width: 90vw;
+    padding: 2rem;
+  }
+  .card_ {
     max-width: 400px;
   }
-  .card__inner {
-    flex-direction: column;
+}
+@media (max-width: 768px) {
+  .cards_ {
+    max-width: 95vw;
+    padding: 20px;
   }
-
-  .card__image-container {
-    width: 100%;
+  .card_ {
+    max-width: 400px;
   }
-
-  .card__image {
-    aspect-ratio: 4 / 4;
+  .card__title {
+    font-size: 22px;
   }
-
-  .card__content {
-    padding: 30px 20px;
+  .card__description {
+    font-size: 14px;
   }
-
+}
+@media (max-width: 480px) {
+  .cards_ {
+    max-width: 70vw;
+    /* padding: 10px; */
+  }
+  .card_ {
+    max-width: 400px;
+  }
   .card__title {
     font-size: 20px;
   }
-
   .card__description {
-    font-size: 14px;
+    font-size: 13px;
+  }
+  .space{
+    height: 39vh;
   }
 }
