--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -9,7 +9,7 @@
   position: absolute;
   bottom: 0;
   z-index: 1;
-  background-image: url('/footer.gif');
+  background-image: url('/Footer__.gif');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
