--- a/frontend/src/components/Event/Events.css
+++ b/frontend/src/components/Event/Events.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   background-image: url("./eventsBg.png");
   background-position: left;
@@ -12,17 +13,21 @@ body {
   background-attachment: fixed;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-} /* Cards Container */
+}
+
+ /* Cards Container */
 .cards_ {
   width: 100%;
-  max-width: 80vw;
+  max-width: 35vw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 0px;
   align-items: center;
   padding: 40px 20px;
-} /* Individual Card */
+} 
+
+/* Individual Card */
 .card_ {
   width: 100%;
   max-width: 600px;
@@ -30,6 +35,7 @@ body {
   top: 0;
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
+
 .card__inner {
   border-radius: 14px;
   display: flex;
@@ -38,37 +44,48 @@ body {
   box-shadow: 0 15px 40px -10px rgba(20, 20, 20, 0.3);
   transform-origin: center top;
   transition: transform 0.5s ease-in-out;
-} /* Image Container */
+}
+
+/* Image Container */
 .card__image-container {
   display: flex;
   width: 100%;
 }
+
 .card__image {
   width: 100%;
   height: auto;
   object-fit: cover;
-  aspect-ratio: 3 / 4;
-} /* Content */
+  aspect-ratio: 4/5;
+}
+
+/* Content */
 .card__content {
   padding: 20px;
   text-align: center;
 }
+
 .card__title {
   font-size: 24px;
   font-weight: 600;
   color: #16263a;
 }
+
 .card__description {
   line-height: 1.4;
   font-size: 16px;
   color: #16263a;
-} /* Spacing */
+}
+
+/* Spacing */
 .space {
-  height: 30vh;
+  height: 70vh;
 }
 .space--small {
   height: 35vh;
-} /* Responsive Styles */
+}
+
+/* Responsive Styles */
 @media (max-width: 1024px) {
   .cards_ {
     max-width: 90vw;
@@ -78,6 +95,7 @@ body {
     max-width: 400px;
   }
 }
+
 @media (max-width: 768px) {
   .cards_ {
     max-width: 95vw;
@@ -93,13 +111,14 @@ body {
     font-size: 14px;
   }
 }
+
 @media (max-width: 480px) {
   .cards_ {
-    max-width: 70vw;
+    max-width: 90vw;
     /* padding: 10px; */
   }
   .card_ {
-    max-width: 400px;
+    max-width: 600px;
   }
   .card__title {
     font-size: 20px;
@@ -107,8 +126,10 @@ body {
   .card__description {
     font-size: 13px;
   }
-  .space{
-    height: 39vh;
+  /* .space {
+    height: 29vh;
+  } */
+  .space {
+    height: 70vh;
   }
 }
-
